--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="calcularAreaCuadrado">
+    <meta name="description" content="trabajo practico variables">
     <meta name="author" content="Pablo German Jimenez">
-
+    <link rel="shortcut icon" href="./img/bboy.bmp" type="image">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
     <title>Variables y Condicionales</title>
 </head>
 
 <body>
+    <main>
+        <div class="container">
+            <div class="col-12  d-flex justify-content-center">
+                <iframe width="560" height="515" src="https://www.youtube.com/embed/qvrMhdQE6zM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" autoplay loop allowfullscreen></iframe>
+                
+
+            </div>
+            <h1 class="text-center">Bboy Linkin♪</h1>
+        </div>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
